--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -30,8 +30,19 @@ jobs:
       - name: Install dependencies
         run: npm ci
 
+      - name: Set base path for GitHub Pages
+        id: base
+        run: |
+          if [ "${{ github.event.repository.name }}" = "${{ github.repository_owner }}.github.io" ]; then
+            echo "path=" >> $GITHUB_OUTPUT
+          else
+            echo "path=/${{ github.event.repository.name }}" >> $GITHUB_OUTPUT
+          fi
+
       - name: Build
         run: npm run build
+        env:
+          VITE_BASE_PATH: ${{ steps.base.outputs.path }}
 
       - name: Setup Pages
         uses: actions/configure-pages@v4
